<resources>
    <string name="app_name">Capstone</string>
    <string name="content_description_pet_image">pet image</string>
    <string name="transition_name">shared_element_transition</string>
    <string name="appwidget_text">Pet my pet</string>
    <string name="add_widget">Add widget</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">Edit</string>
    <string name="complete_action_using">Complete action using</string>
    <string name="pet_saved">Pet saved</string>
    <string name="signed_in">Signed in!</string>
    <string name="signed_in_canceled">Sign in canceled</string>
    <string name="delete_pet">Delete pet</string>
    <string name="are_you_sure_delete">Are you sure you want to delete this pet?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="failure_to_get_photo">Failure to get Photo</string>
    <string name="location_not_found">Location not found!</string>
    <string name="empty_view">Empty view</string>
    <string name="pick_up">Pick up</string>
    <string name="drop_off">Drop off</string>
    <string name="location_icon">Location icon</string>
    <string name="user_account_icon">User account icon</string>
    <string name="breed">Breed</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="your_message_here">Your message here</string>
    <string name="choose_pet_image">Choose pet image</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="call_permission_granted">Call Permission Granted..Please dial again.</string>
    <string name="call_permission_not_granted">Call permission not granted</string>
    <string name="send_email">Send Email</string>
    <string name="pet_my_pet">Pet my pet</string>
    <string name="choose_image">Choose image</string>
    <string name="what_image">What kind of image do you want?</string>
    <string name="random">Random</string>
    <string name="from_device">From device</string>
    <string name="please_enter_location">Please enter your location name</string>
    <string name="set">Set</string>
    <string name="please_enter_required">Please enter all the required fields!</string>
    <string name="discard_changes">Discard changes and quid editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="pets_list">Pets list</string>
    <string name="add_pet">Add pet</string>
    <string name="sign_out">Sign out</string>
    <string name="my_pet">My pet</string>

</resources>
