<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:elevation="8dp"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/pet_detail_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <TextView
                    android:id="@+id/pet_detail_name_tv"
                    android:text="@string/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/pet_detail_name"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:labelFor="@id/pet_detail_name_tv"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <TextView
                    android:id="@+id/pet_detail_breed_tv"
                    android:text="@string/breed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/pet_detail_breed"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/pet_detail_breed_tv"
                    android:inputType="textCapWords"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <TextView
                    android:text="@string/pick_up"
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/pet_detail_start_date"
                    android:drawableStart="@drawable/date_icon"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="40dp"
                    tools:text="23/2/23"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <TextView
                    android:text="@string/drop_off"
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/pet_detail_end_date"
                    android:drawableStart="@drawable/date_icon"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="40dp"
                    tools:text="23/2/23"/>

            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardCornerRadius="8dp"
        android:elevation="8dp"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@drawable/map"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/location_icon"
                android:src="@drawable/location_icon"/>

            <TextView
                android:id="@+id/pet_detail_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                tools:text="Bucharest"/>


        </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardCornerRadius="8dp"
        android:elevation="8dp"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/user"
                android:contentDescription="@string/user_account_icon"/>

            <TextView
                android:id="@+id/pet_detail_owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                tools:text="Eugen"/>


        </LinearLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>